@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,57 +27,67 @@ package com.oracle.svm.hosted;
 
 import static com.oracle.svm.core.jdk.Resources.RESOURCES_INTERNAL_PATH_SEPARATOR;
 
-import java.io.File;
-import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.net.URI;
 import java.nio.file.FileSystem;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
+import java.util.Locale;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.jar.JarEntry;
-import java.util.jar.JarFile;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.LongAdder;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-import com.oracle.svm.core.util.VMError;
+import org.graalvm.compiler.api.replacements.SnippetReflectionProvider;
 import org.graalvm.compiler.debug.DebugContext;
+import org.graalvm.compiler.nodes.ValueNode;
+import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderConfiguration;
+import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderContext;
+import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin;
+import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugins;
 import org.graalvm.compiler.options.Option;
 import org.graalvm.compiler.options.OptionType;
-import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
+import org.graalvm.compiler.phases.util.Providers;
 import org.graalvm.nativeimage.ImageSingletons;
-import org.graalvm.nativeimage.hosted.Feature;
+import org.graalvm.nativeimage.hosted.RuntimeResourceAccess;
 import org.graalvm.nativeimage.impl.ConfigurationCondition;
+import org.graalvm.nativeimage.impl.RuntimeResourceSupport;
 
-import com.oracle.svm.core.annotate.AutomaticFeature;
+import com.oracle.svm.core.ClassLoaderSupport;
+import com.oracle.svm.core.ClassLoaderSupport.ResourceCollector;
+import com.oracle.svm.core.ParsingReason;
+import com.oracle.svm.core.SubstrateUtil;
 import com.oracle.svm.core.configure.ConfigurationFile;
 import com.oracle.svm.core.configure.ConfigurationFiles;
 import com.oracle.svm.core.configure.ResourceConfigurationParser;
 import com.oracle.svm.core.configure.ResourcesRegistry;
+import com.oracle.svm.core.feature.AutomaticallyRegisteredFeature;
+import com.oracle.svm.core.feature.InternalFeature;
 import com.oracle.svm.core.jdk.Resources;
-import com.oracle.svm.core.jdk.localization.LocalizationFeature;
 import com.oracle.svm.core.jdk.resources.NativeImageResourceFileAttributes;
 import com.oracle.svm.core.jdk.resources.NativeImageResourceFileAttributesView;
 import com.oracle.svm.core.jdk.resources.NativeImageResourceFileSystem;
 import com.oracle.svm.core.jdk.resources.NativeImageResourceFileSystemProvider;
 import com.oracle.svm.core.option.HostedOptionKey;
 import com.oracle.svm.core.option.LocatableMultiOptionValue;
-import com.oracle.svm.core.util.ClasspathUtils;
 import com.oracle.svm.core.util.UserError;
-import com.oracle.svm.hosted.FeatureImpl.BeforeAnalysisAccessImpl;
+import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.FeatureImpl.DuringAnalysisAccessImpl;
 import com.oracle.svm.hosted.config.ConfigurationParserUtils;
-import com.oracle.svm.util.ModuleSupport;
+import com.oracle.svm.hosted.jdk.localization.LocalizationFeature;
+import com.oracle.svm.util.LogUtils;
+import com.oracle.svm.util.ReflectionUtil;
+
+import jdk.vm.ci.meta.ResolvedJavaMethod;
 
 /**
  * <p>
@@ -107,24 +117,27 @@ import com.oracle.svm.util.ModuleSupport;
  * @see NativeImageResourceFileAttributes
  * @see NativeImageResourceFileAttributesView
  */
-@AutomaticFeature
-public final class ResourcesFeature implements Feature {
+@AutomaticallyRegisteredFeature
+public final class ResourcesFeature implements InternalFeature {
+
+    static final String MODULE_NAME_ALL_UNNAMED = "ALL-UNNAMED";
 
     public static class Options {
         @Option(help = "Regexp to match names of resources to be included in the image.", type = OptionType.User)//
-        public static final HostedOptionKey<LocatableMultiOptionValue.Strings> IncludeResources = new HostedOptionKey<>(new LocatableMultiOptionValue.Strings());
+        public static final HostedOptionKey<LocatableMultiOptionValue.Strings> IncludeResources = new HostedOptionKey<>(LocatableMultiOptionValue.Strings.build());
 
         @Option(help = "Regexp to match names of resources to be excluded from the image.", type = OptionType.User)//
-        public static final HostedOptionKey<LocatableMultiOptionValue.Strings> ExcludeResources = new HostedOptionKey<>(new LocatableMultiOptionValue.Strings());
+        public static final HostedOptionKey<LocatableMultiOptionValue.Strings> ExcludeResources = new HostedOptionKey<>(LocatableMultiOptionValue.Strings.build());
     }
 
     private boolean sealed = false;
     private final Set<String> resourcePatternWorkSet = Collections.newSetFromMap(new ConcurrentHashMap<>());
     private final Set<String> excludedResourcePatterns = Collections.newSetFromMap(new ConcurrentHashMap<>());
     private int loadedConfigurations;
+    private ImageClassLoader imageClassLoader;
 
     private class ResourcesRegistryImpl extends ConditionalConfigurationRegistry implements ResourcesRegistry {
-        private ConfigurationTypeResolver configurationTypeResolver;
+        private final ConfigurationTypeResolver configurationTypeResolver;
 
         ResourcesRegistryImpl(ConfigurationTypeResolver configurationTypeResolver) {
             this.configurationTypeResolver = configurationTypeResolver;
@@ -132,7 +145,7 @@ public final class ResourcesFeature implements Feature {
 
         @Override
         public void addResources(ConfigurationCondition condition, String pattern) {
-            if (configurationTypeResolver.resolveType(condition.getTypeName()) == null) {
+            if (configurationTypeResolver.resolveConditionType(condition.getTypeName()) == null) {
                 return;
             }
             registerConditionalConfiguration(condition, () -> {
@@ -142,8 +155,13 @@ public final class ResourcesFeature implements Feature {
         }
 
         @Override
+        public void injectResource(Module module, String resourcePath, byte[] resourceContent) {
+            Resources.registerResource(module, resourcePath, resourceContent);
+        }
+
+        @Override
         public void ignoreResources(ConfigurationCondition condition, String pattern) {
-            if (configurationTypeResolver.resolveType(condition.getTypeName()) == null) {
+            if (configurationTypeResolver.resolveConditionType(condition.getTypeName()) == null) {
                 return;
             }
             registerConditionalConfiguration(condition, () -> {
@@ -155,19 +173,36 @@ public final class ResourcesFeature implements Feature {
 
         @Override
         public void addResourceBundles(ConfigurationCondition condition, String name) {
-            if (configurationTypeResolver.resolveType(condition.getTypeName()) == null) {
+            if (configurationTypeResolver.resolveConditionType(condition.getTypeName()) == null) {
                 return;
             }
             registerConditionalConfiguration(condition, () -> ImageSingletons.lookup(LocalizationFeature.class).prepareBundle(name));
+        }
+
+        @Override
+        public void addClassBasedResourceBundle(ConfigurationCondition condition, String basename, String className) {
+            if (configurationTypeResolver.resolveConditionType(condition.getTypeName()) == null) {
+                return;
+            }
+            registerConditionalConfiguration(condition, () -> ImageSingletons.lookup(LocalizationFeature.class).prepareClassResourceBundle(basename, className));
+        }
+
+        @Override
+        public void addResourceBundles(ConfigurationCondition condition, String basename, Collection<Locale> locales) {
+            if (configurationTypeResolver.resolveConditionType(condition.getTypeName()) == null) {
+                return;
+            }
+            registerConditionalConfiguration(condition, () -> ImageSingletons.lookup(LocalizationFeature.class).prepareBundle(basename, locales));
         }
     }
 
     @Override
     public void afterRegistration(AfterRegistrationAccess a) {
         FeatureImpl.AfterRegistrationAccessImpl access = (FeatureImpl.AfterRegistrationAccessImpl) a;
-        ImageClassLoader imageClassLoader = access.getImageClassLoader();
-        ImageSingletons.add(ResourcesRegistry.class,
-                        new ResourcesRegistryImpl(new ConfigurationTypeResolver("resource configuration", imageClassLoader, NativeImageOptions.AllowIncompleteClasspath.getValue())));
+        imageClassLoader = access.getImageClassLoader();
+        ResourcesRegistryImpl resourcesRegistry = new ResourcesRegistryImpl(new ConfigurationTypeResolver("resource configuration", imageClassLoader));
+        ImageSingletons.add(ResourcesRegistry.class, resourcesRegistry);
+        ImageSingletons.add(RuntimeResourceSupport.class, resourcesRegistry);
     }
 
     private static ResourcesRegistryImpl resourceRegistryImpl() {
@@ -176,7 +211,6 @@ public final class ResourcesFeature implements Feature {
 
     @Override
     public void beforeAnalysis(BeforeAnalysisAccess access) {
-        ImageClassLoader imageClassLoader = ((BeforeAnalysisAccessImpl) access).getImageClassLoader();
         ResourceConfigurationParser parser = new ResourceConfigurationParser(ImageSingletons.lookup(ResourcesRegistry.class), ConfigurationFiles.Options.StrictConfiguration.getValue());
         loadedConfigurations = ConfigurationParserUtils.parseAndRegisterConfigurations(parser, imageClassLoader, "resource",
                         ConfigurationFiles.Options.ResourceConfigurationFiles, ConfigurationFiles.Options.ResourceConfigurationResources,
@@ -187,6 +221,95 @@ public final class ResourcesFeature implements Feature {
         resourceRegistryImpl().flushConditionalConfiguration(access);
     }
 
+    private static final class ResourceCollectorImpl implements ResourceCollector {
+        private final DebugContext debugContext;
+        private final ResourcePattern[] includePatterns;
+        private final ResourcePattern[] excludePatterns;
+
+        private static final int WATCHDOG_RESET_AFTER_EVERY_N_RESOURCES = 1000;
+        private static final int WATCHDOG_INITIAL_WARNING_AFTER_N_SECONDS = 60;
+        private static final int WATCHDOG_WARNING_AFTER_EVERY_N_SECONDS = 20;
+        private final Runnable heartbeatCallback;
+        private final LongAdder reachedResourceEntries;
+        private boolean initialReport;
+        private volatile String currentlyProcessedEntry;
+        ScheduledExecutorService scheduledExecutor;
+
+        private ResourceCollectorImpl(DebugContext debugContext, ResourcePattern[] includePatterns, ResourcePattern[] excludePatterns, Runnable heartbeatCallback) {
+            this.debugContext = debugContext;
+            this.includePatterns = includePatterns;
+            this.excludePatterns = excludePatterns;
+
+            this.heartbeatCallback = heartbeatCallback;
+            this.reachedResourceEntries = new LongAdder();
+            this.initialReport = true;
+            this.currentlyProcessedEntry = null;
+        }
+
+        private void prepareProgressReporter() {
+            this.scheduledExecutor = Executors.newSingleThreadScheduledExecutor();
+            scheduledExecutor.scheduleAtFixedRate(() -> {
+                if (initialReport) {
+                    initialReport = false;
+                    LogUtils.warning("Resource scanning is taking a long time. " +
+                                    "This can be caused by class-path or module-path entries that point to large directory structures. " +
+                                    "Please make sure class-/module-path entries are easily accessible to native-image");
+                }
+                System.out.println("Total scanned entries: " + this.reachedResourceEntries + "," +
+                                " current entry: " + (this.currentlyProcessedEntry != null ? this.currentlyProcessedEntry : "Unknown resource"));
+            }, WATCHDOG_INITIAL_WARNING_AFTER_N_SECONDS, WATCHDOG_WARNING_AFTER_EVERY_N_SECONDS, TimeUnit.SECONDS);
+        }
+
+        private void shutDownProgressReporter() {
+            if (!this.scheduledExecutor.isShutdown()) {
+                this.scheduledExecutor.shutdown();
+            }
+        }
+
+        @Override
+        public boolean isIncluded(Module module, String resourceName, URI resource) {
+            this.currentlyProcessedEntry = resource.getScheme().equals("jrt") ? (resource + "/" + resourceName) : resource.toString();
+
+            this.reachedResourceEntries.increment();
+            if (this.reachedResourceEntries.longValue() % WATCHDOG_RESET_AFTER_EVERY_N_RESOURCES == 0) {
+                this.heartbeatCallback.run();
+            }
+
+            String relativePathWithTrailingSlash = resourceName + RESOURCES_INTERNAL_PATH_SEPARATOR;
+            String moduleName = module == null ? null : module.getName();
+
+            for (ResourcePattern rp : excludePatterns) {
+                if (!rp.moduleNameMatches(moduleName)) {
+                    continue;
+                }
+                if (rp.pattern.matcher(resourceName).matches() || rp.pattern.matcher(relativePathWithTrailingSlash).matches()) {
+                    return false;
+                }
+            }
+
+            for (ResourcePattern rp : includePatterns) {
+                if (!rp.moduleNameMatches(moduleName)) {
+                    continue;
+                }
+                if (rp.pattern.matcher(resourceName).matches() || rp.pattern.matcher(relativePathWithTrailingSlash).matches()) {
+                    return true;
+                }
+            }
+
+            return false;
+        }
+
+        @Override
+        public void addResource(Module module, String resourceName, InputStream resourceStream, boolean fromJar) {
+            registerResource(debugContext, module, resourceName, resourceStream, fromJar);
+        }
+
+        @Override
+        public void addDirectoryResource(Module module, String dir, String content, boolean fromJar) {
+            registerDirectoryResource(debugContext, module, dir, content, fromJar);
+        }
+    }
+
     @Override
     public void duringAnalysis(DuringAnalysisAccess access) {
         resourceRegistryImpl().flushConditionalConfiguration(access);
@@ -195,52 +318,64 @@ public final class ResourcesFeature implements Feature {
         }
 
         access.requireAnalysisIteration();
-        DuringAnalysisAccessImpl accessImpl = (DuringAnalysisAccessImpl) access;
-        DebugContext debugContext = accessImpl.getDebugContext();
-        final Pattern[] includePatterns = compilePatterns(resourcePatternWorkSet);
-        final Pattern[] excludePatterns = compilePatterns(excludedResourcePatterns);
 
-        if (JavaVersionUtil.JAVA_SPEC > 8) {
-            try {
-                ModuleSupport.findResourcesInModules(name -> matches(includePatterns, excludePatterns, name),
-                                (resName, content) -> registerResource(debugContext, resName, content));
-            } catch (IOException ex) {
-                throw UserError.abort(ex, "Can not read resources from modules. This is possible due to incorrect module path or missing module visibility directives");
-            }
+        DuringAnalysisAccessImpl duringAnalysisAccess = ((DuringAnalysisAccessImpl) access);
+        ResourcePattern[] includePatterns = compilePatterns(resourcePatternWorkSet);
+        ResourcePattern[] excludePatterns = compilePatterns(excludedResourcePatterns);
+        DebugContext debugContext = duringAnalysisAccess.getDebugContext();
+        ResourceCollectorImpl collector = new ResourceCollectorImpl(debugContext, includePatterns, excludePatterns, duringAnalysisAccess.bb.getHeartbeatCallback());
+        try {
+            collector.prepareProgressReporter();
+            ImageSingletons.lookup(ClassLoaderSupport.class).collectResources(collector);
+        } finally {
+            collector.shutDownProgressReporter();
         }
-
-        /*
-         * Since IncludeResources takes regular expressions it's safer to disallow passing
-         * more than one regex with a single IncludeResources option. Note that it's still
-         * possible pass multiple IncludeResources regular expressions by passing each as
-         * its own IncludeResources option. E.g.
-         * @formatter:off
-         * -H:IncludeResources=nobel/prizes.json -H:IncludeResources=fields/prizes.json
-         * @formatter:on
-         */
-
-        ImageClassLoader loader = accessImpl.imageClassLoader;
-        Stream.concat(loader.modulepath().stream(), loader.classpath().stream()).forEach(classpathFile -> {
-            try {
-                if (Files.isDirectory(classpathFile)) {
-                    scanDirectory(debugContext, classpathFile, includePatterns, excludePatterns);
-                } else if (ClasspathUtils.isJar(classpathFile)) {
-                    scanJar(debugContext, classpathFile, includePatterns, excludePatterns);
-                }
-            } catch (IOException ex) {
-                throw UserError.abort("Unable to handle classpath element '%s'. Make sure that all classpath entries are either directories or valid jar files.", classpathFile);
-            }
-        });
-
         resourcePatternWorkSet.clear();
     }
 
-    private static Pattern[] compilePatterns(Set<String> patterns) {
+    private ResourcePattern[] compilePatterns(Set<String> patterns) {
         return patterns.stream()
                         .filter(s -> s.length() > 0)
-                        .map(Pattern::compile)
-                        .collect(Collectors.toList())
-                        .toArray(new Pattern[]{});
+                        .map(this::makeResourcePattern)
+                        .toList()
+                        .toArray(new ResourcePattern[]{});
+    }
+
+    private ResourcePattern makeResourcePattern(String rawPattern) {
+        String[] moduleNameWithPattern = SubstrateUtil.split(rawPattern, ":", 2);
+        if (moduleNameWithPattern.length < 2) {
+            return new ResourcePattern(null, Pattern.compile(moduleNameWithPattern[0]));
+        } else {
+            String moduleName = moduleNameWithPattern[0];
+            boolean acceptModuleName = MODULE_NAME_ALL_UNNAMED.equals(moduleName) ? true : imageClassLoader.findModule(moduleName).isPresent();
+            if (acceptModuleName) {
+                return new ResourcePattern(moduleName, Pattern.compile(moduleNameWithPattern[1]));
+            } else {
+                throw UserError.abort("Resource pattern \"" + rawPattern + "\"s specifies unknown module " + moduleName);
+            }
+        }
+    }
+
+    private static final class ResourcePattern {
+        final String moduleName;
+        final Pattern pattern;
+
+        private ResourcePattern(String moduleName, Pattern pattern) {
+            this.moduleName = moduleName;
+            this.pattern = pattern;
+        }
+
+        boolean moduleNameMatches(String resourceContainerModuleName) {
+            if (moduleName == null) {
+                // Accept everything
+                return true;
+            }
+            if (moduleName.equals(MODULE_NAME_ALL_UNNAMED)) {
+                // Only accept if resource is from classpath
+                return resourceContainerModuleName == null;
+            }
+            return moduleName.equals(resourceContainerModuleName);
+        }
     }
 
     @Override
@@ -259,108 +394,68 @@ public final class ResourcesFeature implements Feature {
         }
     }
 
-    private static void scanDirectory(DebugContext debugContext, Path root, Pattern[] includePatterns, Pattern[] excludePatterns) throws IOException {
-        Map<String, List<String>> matchedDirectoryResources = new HashMap<>();
-        Set<String> allEntries = new HashSet<>();
-
-        ArrayDeque<Path> queue = new ArrayDeque<>();
-        queue.push(root);
-        while (!queue.isEmpty()) {
-            Path entry = queue.pop();
-
-            /* Resources always use / as the separator, as do our resource inclusion patterns */
-            String relativeFilePath;
-            if (entry != root) {
-                relativeFilePath = root.relativize(entry).toString().replace(File.separatorChar, RESOURCES_INTERNAL_PATH_SEPARATOR);
-                allEntries.add(relativeFilePath);
-            } else {
-                relativeFilePath = "";
-            }
-
-            if (Files.isDirectory(entry)) {
-                if (matches(includePatterns, excludePatterns, relativeFilePath)) {
-                    matchedDirectoryResources.put(relativeFilePath, new ArrayList<>());
-                }
-                try (Stream<Path> files = Files.list(entry)) {
-                    files.forEach(queue::push);
-                }
-            } else {
-                if (matches(includePatterns, excludePatterns, relativeFilePath)) {
-                    try (InputStream is = Files.newInputStream(entry)) {
-                        registerResource(debugContext, relativeFilePath, is);
-                    }
-                }
-            }
-        }
-
-        for (String entry : allEntries) {
-            int last = entry.lastIndexOf(RESOURCES_INTERNAL_PATH_SEPARATOR);
-            String key = last == -1 ? "" : entry.substring(0, last);
-            List<String> dirContent = matchedDirectoryResources.get(key);
-            if (dirContent != null && !dirContent.contains(entry)) {
-                dirContent.add(entry.substring(last + 1));
-            }
-        }
-
-        matchedDirectoryResources.forEach((dir, content) -> {
-            content.sort(Comparator.naturalOrder());
-            registerDirectoryResource(debugContext, dir, String.join(System.lineSeparator(), content));
-        });
-    }
-
-    private static void scanJar(DebugContext debugContext, Path jarPath, Pattern[] includePatterns, Pattern[] excludePatterns) throws IOException {
-        try (JarFile jf = new JarFile(jarPath.toFile())) {
-            Enumeration<JarEntry> entries = jf.entries();
-            while (entries.hasMoreElements()) {
-                JarEntry entry = entries.nextElement();
-                if (entry.isDirectory()) {
-                    String dirName = entry.getName().substring(0, entry.getName().length() - 1);
-                    if (matches(includePatterns, excludePatterns, dirName)) {
-                        // Register the directory with empty content to preserve Java behavior
-                        registerDirectoryResource(debugContext, dirName, "");
-                    }
-                } else {
-                    if (matches(includePatterns, excludePatterns, entry.getName())) {
-                        try (InputStream is = jf.getInputStream(entry)) {
-                            registerResource(debugContext, entry.getName(), is);
-                        }
-                    }
-                }
-            }
+    @SuppressWarnings("try")
+    private static void registerResource(DebugContext debugContext, Module module, String resourceName, InputStream resourceStream, boolean fromJar) {
+        try (DebugContext.Scope s = debugContext.scope("registerResource")) {
+            String moduleNamePrefix = module == null ? "" : module.getName() + ":";
+            debugContext.log(DebugContext.VERBOSE_LEVEL, "ResourcesFeature: registerResource: %s%s", moduleNamePrefix, resourceName);
+            Resources.registerResource(module, resourceName, resourceStream, fromJar);
         }
     }
 
-    private static boolean matches(Pattern[] includePatterns, Pattern[] excludePatterns, String relativePath) {
-        VMError.guarantee(!relativePath.contains("\\"), "Resource path contains backslash!");
-        String relativePathWithTrailingSlash = relativePath + RESOURCES_INTERNAL_PATH_SEPARATOR;
-        for (Pattern p : excludePatterns) {
-            if (p.matcher(relativePath).matches() || p.matcher(relativePathWithTrailingSlash).matches()) {
-                return false;
-            }
+    @SuppressWarnings("try")
+    private static void registerDirectoryResource(DebugContext debugContext, Module module, String dir, String content, boolean fromJar) {
+        try (DebugContext.Scope s = debugContext.scope("registerResource")) {
+            String moduleNamePrefix = module == null ? "" : module.getName() + ":";
+            debugContext.log(DebugContext.VERBOSE_LEVEL, "ResourcesFeature: registerResource: %s%s", moduleNamePrefix, dir);
+            Resources.registerDirectoryResource(module, dir, content, fromJar);
+        }
+    }
+
+    @Override
+    public void registerInvocationPlugins(Providers providers, SnippetReflectionProvider snippetReflection, GraphBuilderConfiguration.Plugins plugins, ParsingReason reason) {
+        if (!reason.duringAnalysis() || reason == ParsingReason.JITCompilation) {
+            return;
         }
 
-        for (Pattern p : includePatterns) {
-            if (p.matcher(relativePath).matches() || p.matcher(relativePathWithTrailingSlash).matches()) {
+        Method[] resourceMethods = {
+                        ReflectionUtil.lookupMethod(Class.class, "getResource", String.class),
+                        ReflectionUtil.lookupMethod(Class.class, "getResourceAsStream", String.class)
+        };
+        Method resolveResourceName = ReflectionUtil.lookupMethod(Class.class, "resolveName", String.class);
+
+        for (Method method : resourceMethods) {
+            registerResourceRegistrationPlugin(plugins.getInvocationPlugins(), method, snippetReflection, resolveResourceName, reason);
+        }
+    }
+
+    private void registerResourceRegistrationPlugin(InvocationPlugins plugins, Method method, SnippetReflectionProvider snippetReflectionProvider, Method resolveResourceName, ParsingReason reason) {
+        List<Class<?>> parameterTypes = new ArrayList<>();
+        assert !Modifier.isStatic(method.getModifiers());
+        parameterTypes.add(InvocationPlugin.Receiver.class);
+        parameterTypes.addAll(Arrays.asList(method.getParameterTypes()));
+
+        plugins.register(method.getDeclaringClass(), new InvocationPlugin.RequiredInvocationPlugin(method.getName(), parameterTypes.toArray(new Class<?>[0])) {
+            @Override
+            public boolean isDecorator() {
                 return true;
             }
-        }
 
-        return false;
-    }
-
-    @SuppressWarnings("try")
-    private static void registerResource(DebugContext debugContext, String resourceName, InputStream resourceStream) {
-        try (DebugContext.Scope s = debugContext.scope("registerResource")) {
-            debugContext.log(DebugContext.VERBOSE_LEVEL, "ResourcesFeature: registerResource: " + resourceName);
-            Resources.registerResource(resourceName, resourceStream);
-        }
-    }
-
-    @SuppressWarnings("try")
-    private static void registerDirectoryResource(DebugContext debugContext, String dir, String content) {
-        try (DebugContext.Scope s = debugContext.scope("registerResource")) {
-            debugContext.log(DebugContext.VERBOSE_LEVEL, "ResourcesFeature: registerResource: " + dir);
-            Resources.registerDirectoryResource(dir, content);
-        }
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode arg) {
+                try {
+                    if (!sealed && receiver.isConstant() && arg.isJavaConstant() && !arg.isNullConstant()) {
+                        Class<?> clazz = snippetReflectionProvider.asObject(Class.class, receiver.get().asJavaConstant());
+                        String resource = snippetReflectionProvider.asObject(String.class, arg.asJavaConstant());
+                        String resourceName = (String) resolveResourceName.invoke(clazz, resource);
+                        b.add(ReachabilityRegistrationNode.create(() -> RuntimeResourceAccess.addResource(clazz.getModule(), resourceName), reason));
+                        return true;
+                    }
+                } catch (IllegalAccessException | InvocationTargetException e) {
+                    throw VMError.shouldNotReachHere(e);
+                }
+                return false;
+            }
+        });
     }
 }
